--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -8,6 +8,8 @@
         <item >First</item>
     </string-array>
         <string name="reconnect">Reconnect</string>
+        <string name="server_url_title">Web Launcher Server URL</string>
+        <string name="server_url_summary">Enter to the URL where you installed the Web Launcher server application</string>
         <string name="TouchBackground">One finger tap: Left-click\nTwo finger tap: Right-click\nTwo finger drag: Scroll\nLong press: Drag</string>
         <string name="firstruntext">Thanks for installing the Simple Computer Remote!\n\nIn order to operate this remote, you need to have the host application installed on the computer you wish to operate.\nGo to http://rekaplogic.com on your computer and download the appropriate host software for your operating system to get your computer set up for use.\n\nFor upgrading users, please update the server software to ensure you have all of the latest features.\n\nNew features requiring server upgrade:\nTwo finger scrolling.\n\nNew features for this release:\nLong press to drag\nTwo finger scrolling\nTwo finger tap for right click</string>
         <string-array name="options">
